:art: Use AssertJ's extracting() feature instead of ReflectionTestUtils.getField().